--- a/web/.gitignore
+++ b/web/.gitignore
@@ -1,15 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/backend/node_modules
-/web/node_modules
-/mobile/node_modules
-/backend/.pnp
-/web/.pnp
-/mobile/.pnp
-/backend/.pnp.js
-/web/.pnp.js
-/mobile/.pnp.js
+/node_modules
+/.pnp
+.pnp.js
 
 # testing
 /coverage
